# tauri-explorer

./: .gitignore  AGENTS.md  CLAUDE.md  PKGBUILD  README.md  Vagrantfile  arch_install.sh  architecture_consolidation.md  extra_notes.md  new_todo.md  package-lock.json  package.json  playwright.config.ts  playwright_tests.md  specs.md  tauri-explorer-debug-0.1.0-1-x86_64.pkg.tar.zst  test-dnd.mjs  vite.config.js  vitest.config.ts
.abacus/: config.yaml
.beads/: .migration-hint-ts  config.yaml  issues.jsonl  metadata.json
.claude/: CLAUDE.md  settings.json
.perles/: config.yaml
docs/: ARCHITECTURE.md  CODEBASE_MAP.md  CODEMAP.md  HANDOVER.md  INDEX.md  KNOWLEDGE.md  high_level_plan.md  lessons_learnt.md  ui-facelift-plan.md
e2e/: file-operations.spec.ts  helpers.ts  keybindings-settings.spec.ts  keyboard.spec.ts  navigation.spec.ts  new-features-3.spec.ts  new-features.spec.ts  performance.spec.ts  resizable-preview.spec.ts  selection.spec.ts  test-ctrlp.spec.ts  test-paste-select.spec.ts  tilde-expansion.spec.ts
scripts/: clean-rebuild.sh  dev.sh  perf-check.ts  validate.sh
src/: tauri-explorer.desktop
src-python/: main.py  pyproject.toml
src-python/.svelte-kit/: ambient.d.ts
src-python/api/: main.py
src-python/api/routes/: files.py
src-python/domain/: file_entry.py  file_ops.py
src-python/tests/: test_api.py  test_domain.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.svelte-kit/: ambient.d.ts
src-tauri/capabilities/: default.json
src-tauri/icons/: gen_icons.py  icon.icns
src-tauri/src/: archive.rs  clipboard.rs  config.rs  content_search.rs  error.rs  files.rs  lib.rs  main.rs  search.rs  task_registry.rs  thumbnails.rs  wallpaper.rs
src-tauri/src/files/: dir_listing.rs  external_apps.rs  file_ops.rs  mod.rs
tests/: setup.ts
(+153 files in other folders)
