[package]
name = "tauri-explorer"
version = "0.1.0"
description = "A minimalistic, high-performance file explorer"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "5"

