[package]
name = "tauri-explorer"
version = "0.1.0"
description = "A minimalistic, high-performance file explorer"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_explorer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
fs_extra = "1.3"
opener = "0.7"
nucleo-matcher = "0.3"
jwalk = "0.8"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Graphics_Dwm", "Win32_Foundation"] }

